--- a/GadgetZone/src/main/resources/templates/index.html
+++ b/GadgetZone/src/main/resources/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GadgetZone - Главная</title>
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+
 </head>
 <body>
     <header class="header">
