--- a/GadgetZone/src/main/resources/templates/index.html
+++ b/GadgetZone/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
             <ul class="nav-menu">
                 <li><a href="/profile" class="nav-link">Профиль</a></li>
                 <li><a href="/orders" class="nav-link">Заказы</a></li>
-                <li><a href="/wishlist" class="nav-link">Избранное</a></li>
+                <li><a href="/favorites" class="nav-link">Избранное</a></li>
                 <li>
                     <a href="/cart" class="nav-link cart-link">
                         Корзина
