очень много доработок

--- a/GadgetZone/src/main/resources/templates/profile.html
+++ b/GadgetZone/src/main/resources/templates/profile.html
@@ -22,6 +22,6 @@
 
         <a th:href="@{/logout}" class="btn" style="margin-top: 2rem; display: inline-block;">Выйти</a>
     </div>
-</div>ё
+</div>
 </body>
 </html>
